--- a/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
+++ b/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
                             Corrections
                         </a>
                         <div class="navbar-dropdown">
-                            <a href="" class="navbar-item">
+                            <a href="/TermCodes/Correction" class="navbar-item">
                                 Term Codes
                             </a>
                             <a href="" class="navbar-item">
