--- a/KeysReporting.WebAssembly.App/Client/Shared/WarnMessage.razor
+++ b/KeysReporting.WebAssembly.App/Client/Shared/WarnMessage.razor
@@ -1,17 +1,17 @@
-﻿if (!string.IsNullOrEmpty(Message))
+﻿@if (!string.IsNullOrEmpty(Message))
 {
-<section class="hero is-warning is-small">
-    <div class="hero-body">
-        <div class="container">
-            <h1 class="title">
-                Warning
-            </h1>
-            <h2 class="subtitle">
-                @Message
-            </h2>
-        </div>
-    </div>
-</section>
+        <section class="hero is-warning is-small">
+            <div class="hero-body">
+                <div class="container">
+                    <h1 class="title">
+                        Warning
+                    </h1>
+                    <h2 class="subtitle">
+                    @Message
+                    </h2>
+                </div>
+            </div>
+        </section>
 }
 
 @code
