CPH Report Download and Term Code Edit

--- a/KeysReporting.WebAssembly.App/Client/Pages/CPH/Report.razor
+++ b/KeysReporting.WebAssembly.App/Client/Pages/CPH/Report.razor
@@ -140,7 +140,10 @@
                                 </div>
                             </div>
                             <hr />
-                            <button class="button is-primary @_buttonClass">Search</button>
+                            <div class="buttons">
+                                <button class="button is-primary @_buttonClass">Search</button>
+                                <a class="button is-warning @_buttonClass" @onclick=@(() => DownloadReport())>Download</a>
+                            </div>
                         </EditForm>
                     </div>
                 </div>
